{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "ffdf525d-74f2-4c3f-bb9b-b529276508c2",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "38485104-d39a-41b7-8171-e6cd2fd0339d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "0d4d5f50-9e8f-46ba-b0bb-39cc94a13732",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "03f0e7a6-4813-4722-9758-96abde54cda9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4df1599e-d933-407f-810d-4d100980627a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "651b6455-673d-4785-9845-978a477d6fbb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ca315ba-3b79-4955-bd8c-f24383b2076c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}